tests/Errors/SyntaxError/unexpectedSemicolon.php
<?php declare(strict_types = 1);

namespace ApiGenTests\EdgeCases;


class ParserError;
